[gd_scene load_steps=2 format=3 uid="uid://fhhseug7o7mg"]

[ext_resource type="Script" path="res://addons/rts_terrain/TerrainEditorDock.gd" id="1_mwj6q"]

[node name="RTS Terrain" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( "1_mwj6q" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Raise Cliff" type="Button" parent="."]
offset_right = 1920.0
offset_bottom = 31.0
text = "Raise Cliff"

[node name="Lower Cliff" type="Button" parent="."]
offset_top = 35.0
offset_right = 1920.0
offset_bottom = 66.0
text = "Lower Cliff"

[node name="Create Ramp" type="Button" parent="."]
offset_top = 70.0
offset_right = 1920.0
offset_bottom = 101.0
text = "Create Ramp"

[node name="Remove Ramp" type="Button" parent="."]
offset_top = 105.0
offset_right = 1920.0
offset_bottom = 136.0
text = "Remove Ramp"

[connection signal="pressed" from="Raise Cliff" to="." method="_on_raise_cliff_pressed"]
[connection signal="pressed" from="Lower Cliff" to="." method="_on_lower_cliff_pressed"]
[connection signal="pressed" from="Create Ramp" to="." method="_on_create_ramp_pressed"]
[connection signal="pressed" from="Remove Ramp" to="." method="_on_remove_ramp_pressed"]
